[package]
edition = "2021"
name = "lapce-ruby"
version = "0.0.1"

[dependencies]
# futures = {version = "0.3.21"} // need network
# reqwest = {version = "0.11", features = ["json", "socks"]} // need network
serde = {version = "1.0.137", features = ["derive"]}
serde_json = "1.0.81"
zip = {version = "0.6.0", default-features = false, features = ["deflate"]}

[dependencies.lapce-plugin]
git = "https://github.com/lapce/lapce-plugin-rust"
